--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.hatch.build.targets.wheel]
-packages = ["condenses_mining"]
+packages = ["condense_miner"]
 
 [tool.uv.sources]
 
@@ -11,7 +11,7 @@ requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [project]
-name = "subnet-mining"
+name = "subnet-miner"
 version = "0.1.0"
 description = "Subnet Miner"
 readme = "README.md"
@@ -37,5 +37,4 @@ dependencies = [
 ]
 
 [project.scripts]
-condenses-validating = "condenses_validating.main:start_loop"
 update-env = "scripts.update_env:main"
